force-app/main/default/objects/Dan360_CustomerSalesArea__c/Dan360_CustomerSalesArea__c.object-meta.xml
<CustomObject>
    <description>Customer Sales Area</description>
    <label>Customer Sales Area</label>
    <nameField>
        <label>Nombre de Customer Sales Area</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Sales Area</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>