force-app/main/default/objects/Dan360_CustomerSalesArea__c/fields/Dan360_Block__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Block__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que indica si se pueden generar pedidos para el cliente.</description>
    <label>Block</label>
    <type>Checkbox</type>
</CustomField>