force-app/main/default/objects/Dan360_CustomerSalesArea__c/fields/Dan360_Customer__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Customer__c</fullName>
    <description>Cliente relacionado a la Sales Area.</description>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Sales Area</relationshipLabel>
    <relationshipName>Customer_Sales_Area</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>