force-app/main/default/objects/Dan360_CustomerSalesArea__c/fields/Dan360_DeletionFlag__c.field-meta.xml
<CustomField>
    <fullName>Dan360_DeletionFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si el cliente está activo para un sales Área</description>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>