force-app/main/default/objects/Dan360_CustomerSalesArea__c/fields/Dan360_District__c.field-meta.xml
<CustomField>
    <fullName>Dan360_District__c</fullName>
    <label>Distrito</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>00</fullName>
            </value>
            <value>
                <fullName>AR3MTR</fullName>
            </value>
            <value>
                <fullName>AR3INS</fullName>
            </value>
            <value>
                <fullName>AR3DIS</fullName>
            </value>
            <value>
                <fullName>AR3ACC</fullName>
            </value>
            <value>
                <fullName>AR3MAR</fullName>
            </value>
            <value>
                <fullName>AR3FAR</fullName>
            </value>
            <value>
                <fullName>AR3RES</fullName>
            </value>
            <value>
                <fullName>AR3TEN</fullName>
            </value>
            <value>
                <fullName>AR3PRO</fullName>
            </value>
            <value>
                <fullName>AR3PHA</fullName>
            </value>
            <value>
                <fullName>AR3INT</fullName>
            </value>
            <value>
                <fullName>AR3HOM</fullName>
            </value>
            <value>
                <fullName>AR3DPF</fullName>
            </value>
            <value>
                <fullName>#</fullName>
            </value>
            <value>
                <fullName>AR3ECO</fullName>
            </value>
            <value>
                <fullName>AR3OTH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>