force-app/main/default/objects/Dan360_CustomerSalesArea__c/fields/Dan360_Office__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Office__c</fullName>
    <label>Oficina</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>00</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>