force-app/main/default/objects/Dan360_CustomerSalesArea__c/fields/Dan360_PaymentMethodID__c.field-meta.xml
<CustomField>
    <fullName>Dan360_PaymentMethodID__c</fullName>
    <description>Id método de pago</description>
    <label>Id método de pago</label>
    <length>255</length>
    <type>Text</type>
</CustomField>