force-app/main/default/objects/Dan360_CustomerSalesArea__c/fields/Dan360_PaymentMethodName__c.field-meta.xml
<CustomField>
    <fullName>Dan360_PaymentMethodName__c</fullName>
    <label>Método de pago</label>
    <length>255</length>
    <type>Text</type>
</CustomField>