force-app/main/default/objects/Dan360_CustomerSalesArea__c/fields/Dan360_SalesArea__c.field-meta.xml
<CustomField>
    <fullName>Dan360_SalesArea__c</fullName>
    <description>Unidad de negocio que se asocia al cliente.</description>
    <label>Unidad de negocio</label>
    <referenceTo>Dan360_SalesArea__c</referenceTo>
    <relationshipLabel>Customer Sales Area</relationshipLabel>
    <relationshipName>Customer_Sales_Area</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>