force-app/main/default/objects/Dan360_CustomerSalesArea__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Dan360_Customer__c</columns>
    <columns>Dan360_Block__c</columns>
    <columns>Dan360_SalesArea__c</columns>
    <columns>Dan360_District__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>