force-app/main/default/objects/Dan360_CustomerSalesArea__c/listViews/Dan360_CustomerSalesAreaDesbloqueada.listView-meta.xml
<ListView>
    <fullName>Dan360_CustomerSalesAreaDesbloqueada</fullName>
    <columns>NAME</columns>
    <columns>Dan360_Customer__c</columns>
    <columns>Dan360_Block__c</columns>
    <columns>Dan360_SalesArea__c</columns>
    <columns>Dan360_District__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Dan360_Block__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <label>Customer Sales Area Desbloqueada</label>
</ListView>